Add a call-to-action button for users to get started on the Passport API.

--- a/docs/Intro.mdx
+++ b/docs/Intro.mdx
@@ -1,2 +1,3 @@
 # Welcome to the Pactoria Developer Platform
 Here you can create your apps and access resources to learn the Passport API.
+<a href="/docs" className={"btn btn-outline btn-primary"}>Get Started</a>
