Add Reference docs

--- a/docs/Intro.mdx
+++ b/docs/Intro.mdx
@@ -1,3 +1,28 @@
 # Welcome to the Pactoria Developer Platform
 Here you can create your apps and access resources to learn the Passport API.
-<a href="/docs" className={"btn btn-outline btn-primary"}>Get Started</a>
+
+<a href="/docs" className={"btn btn-link btn-primary"}>Get Started</a>
+
+---
+
+## Explore
+
+#### Create Applications
+
+Create apps to build integrations with Pactoria.
+
+Also, use the [Gateway API](/docs/topics/gateway) to respond to [real-time events](/docs/topics/gateway-events) happening in the server, like when a siege is declared.
+
+#### Find Tools and Libraries
+
+The Pactoria community has built [libraries and tools](/docs/tools/Community-Resources). No matter your experience there are resources to speed up and simplify
+the development of your app.
+
+#### Get Support
+
+- Join the [Discord Server](https://discord.gg/Pactoria) to ask questions and get help from the community.
+- Use our [GitHub]() to report bugs and suggest features.
+
+Go [build your app](https://pactoria.net/developers/applications)! We're excited to see what you create.
+
+- Pactoria Team
